--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ header {
   font-family: "Myriad Set Pro", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 42px;
   margin-bottom: 12px;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .dek_hed {
@@ -143,7 +143,7 @@ header {
 }
 
 .subhero {
-  width: 24%;
+  width: 24.5%;
   display: inline-block;
   height: 200px;
   margin: 0 auto;
@@ -192,8 +192,8 @@ h5 {
 
 .copy_box {
   margin-left: 75px;
-  margin-bottom: 48px;
-  display: inline;
+  display: inline-block;
+  width: 80%;
 }
 
 .region {
@@ -214,4 +214,8 @@ a:visited {
 
 hr {
   font-weight: 100;
+}
+
+.flag {
+  display: inline-block;
 }
