--- a/style.css
+++ b/style.css
@@ -103,24 +103,33 @@ table {
 }
 
 nav {
-  background-color: black;
-  padding: 6px;
-  height: 40px;
-  margin-bottom: 24px
+  height: 44px;
 }
 
 .container {
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.nav-icon {
   width: 8%;
   display: inline-block;
-  margin-top: -10px;
-  max-width: 100%;
-  height: 16px;
 }
 
 header {
+  background-color: black;
   text-align: center;
   font-family: "Myriad Set Pro", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 42px;
+  margin-bottom: 12px;
+  font-weight: 500;
+}
+
+h1 {
+  text-align: center;
+  font-family: "Myriad Set Pro", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-size: 42px;
+  line-height: 48pt;
   margin-bottom: 12px;
   font-weight: 500;
 }
@@ -134,19 +143,18 @@ header {
 }
 
 .hero {
-  display: block;
   margin: 12px auto 12px auto;
-  width: 60%;
-  object-fit: none;
+  width: 100%;
+  object-fit: cover;
   height: 500px;
   object-position: center -200px;
-}
+ }
 
 .subhero {
   width: 24.5%;
   display: inline-block;
   height: 200px;
-  margin: 0 auto;
+  margin: -150px auto 12px;
 }
 
 .responsive {
